refactor #386: 불변객체 toList()로 만들기